fix : getNewBooks 캐시 에러 수정